--- a/express/config.env
+++ b/express/config.env
@@ -1,2 +1,5 @@
 NODE_ENV = development
 PORT = 3000
+DATABASE = mongodb+srv://liusijun:<PASSWORD>@cluster0.xap4y.mongodb.net/?retryWrites=true&w=majority
+DATABASE_LOCAL = mongodb://localhost:27017
+DATABASE_PASSWORD = nj412010
